--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=8000
 JWT_SECRET=sanjayks
 PASSWORD_HASH_SALT_ROUNDS=7
 //MONGO_URI=mongodb://localhost:27017
-MONGO_URI=mongodb+srv://sanjayks8046:Iahdd45uAymNkIEM@zendb.kv2hnw1.mongodb.net/MERNApp?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sanjayks8046:Iahdd45uAymNkIEM@zendb.kv2hnw1.mongodb.net/MovieApp?retryWrites=true&w=majority
